@@ -4,6 +4,10 @@ Post-v3.1.0
      * OVS now collects per-interface upcall statistics that can be obtained
        via 'ovs-appctl dpctl/show -s' or the interface's statistics column
        in OVSDB.  Available with upstream kernel 6.2+.
+   - ovs-ctl:
+     * Added new options --[ovsdb-server|ovs-vswitchd]-umask=MODE to set umask
+       value when starting OVS daemons.  E.g., use --ovsdb-server-umask=0002
+       in order to create OVSDB sockets with access mode of 0770.
 
 
 v3.1.0 - 16 Feb 2023
